--- a/basicpitch/train_basicpitch.ipynb
+++ b/basicpitch/train_basicpitch.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 训练不具备分离能力的网络\n",
-    "basicamt.py"
+    "# 训练[BasicPitch](https://github.com/spotify/basic-pitch)用于比较\n",
+    "参考的是2025年1月18日clone的代码。由于符合要求的tensorflow-gpu无法在windows上运行，所以用torch复现。基本按照论文所说的进行了配置，不同的地方都有合理的原因，见注释。"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "from data.septimbre.data import Instruments\n",
     "dataset = Instruments(\n",
-    "    folder = '../data/septimbre/piano_large_short_256',\n",
+    "    folder = '../data/septimbre/multi_large_256',   # 训练集文件夹路径\n",
     "    mix = 1,\n",
     "    input = '.cqt.npy',\n",
     "    output = '.npy'\n",
@@ -49,10 +49,11 @@
     "print(\"输入大小: \", input.shape)\n",
     "print(\"输出大小: \", label.shape)\n",
     "# 如果开了benchmark，batchsize最好一样大，且是两个数据集大小的公因数\n",
+    "# 公平起见和我用一样的batchsize (论文用的是16，我18)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=18, shuffle=True, pin_memory=True, num_workers=4)\n",
     "\n",
     "val = Instruments(\n",
-    "    folder = '../data/septimbre/piano_medium_short_256',\n",
+    "    folder = '../data/septimbre/multi_medium_256',\n",
     "    mix = 1,\n",
     "    input = '.cqt.npy',\n",
     "    output = '.npy'\n",
@@ -70,12 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from basicamt import BasicAMT\n",
-    "model = BasicAMT().to(device)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=3e-4)\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.32, patience=2, threshold=1e-3)\n",
-    "checkpoint_path = \"basicamt.pth\"\n",
-    "loss_path = \"basicamt.loss.txt\"\n",
+    "from basicpitch import BasicPitch\n",
+    "model = BasicPitch().to(device)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-3)  # 论文说的是1e-3，但我用的是3e-4，所以learnschedule用了0.3\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=2, threshold=1e-3)\n",
+    "checkpoint_path = \"basicpitch.pth\"\n",
+    "loss_path = \"basicpitch.loss.txt\"\n",
     "min_loss = float('inf')\n",
     "epoch_now = 0"
    ]
@@ -101,14 +102,13 @@
    "outputs": [],
    "source": [
     "epoch_total = 50\n",
-    "stage_save_interval = 45    # save checkpoint every $stage_save_interval$ epochs\n",
+    "stage_save_interval = 21    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
     "    model.train()\n",
     "    train_loss = 0\n",
-    "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
     "        input = input.to(device)    # input: (batch, mix, 2, time)\n",
     "        target = target.to(device)  # target: (batch, mix, 7 * 12, 660)\n",
@@ -121,12 +121,9 @@
     "            mixed = input.squeeze(dim=1)\n",
     "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.01   # 加入噪声 经过听觉和可视化觉得0.01是一个合适的值\n",
-    "        # midi_mixed: (batch, 7 * 12, 660)\n",
-    "\n",
     "        onset, note = model(mixed)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
-    "        loss = BasicAMT.loss(onset, note, midi_mixed)\n",
+    "        loss = BasicPitch.loss[\"note\"]((midi_mixed == 1).float(), note) + model.loss[\"onset\"]((midi_mixed > 1.5).float(), onset)\n",
     "        train_loss += loss.item()\n",
     "\n",
     "        loss.backward()\n",
@@ -151,7 +148,7 @@
     "                midi_mixed = target.squeeze(dim=1)\n",
     "\n",
     "            onset, note = model(mixed)\n",
-    "            loss = BasicAMT.loss(onset, note, midi_mixed)\n",
+    "            loss = BasicPitch.loss[\"note\"]((midi_mixed == 1).float(), note) + model.loss[\"onset\"]((midi_mixed > 1.5).float(), onset)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
@@ -205,112 +202,6 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 用半精度加速 会出现nan 不要用\n",
-    "from torch.amp import GradScaler, autocast\n",
-    "scaler = GradScaler()\t# 实例化对象\n",
-    "\n",
-    "epoch_total = 100\n",
-    "stage_save_interval = 10    # save checkpoint every $stage_save_interval$ epochs\n",
-    "virtual_batch_size = 1      # 梯度累积 缓解显存瓶颈\n",
-    "\n",
-    "optimizer.zero_grad()\n",
-    "for epoch in range(epoch_now+1, epoch_total):\n",
-    "    # training\n",
-    "    model.train()\n",
-    "    train_loss = 0\n",
-    "    virtual_batch = 0\n",
-    "    for (input, target) in tqdm.tqdm(dataloader):\n",
-    "        input = input.to(device)\n",
-    "        # input: (batch, mix, 2, 8 * 36, 660)\n",
-    "        target = target.to(device)\n",
-    "        # target: (batch, mix, 7 * 12, 660)\n",
-    "\n",
-    "        # 由于basicamt的目标没有分离音色，因此mix仅仅是数据增强的手段\n",
-    "        # 混合CQT并加噪\n",
-    "        mixed = torch.sum(input, dim=1, keepdim=False)  # 混合后的CQT\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.008   # 加入噪声\n",
-    "        # 混合midi\n",
-    "        midi_mixed, _ = target.max(dim=-3, keepdim=False)\n",
-    "        # midi_mixed: (batch, 7 * 12, 660)\n",
-    "\n",
-    "        with autocast(device_type='cuda'):\n",
-    "            onset, note = model(mixed)\n",
-    "            if torch.isnan(onset).any() or torch.isnan(note).any():\n",
-    "                print(\"Model output is NaN. Skipping this batch.\")\n",
-    "                optimizer.zero_grad()\n",
-    "                continue\n",
-    "            # onset: (batch, 7 * 12, 660)\n",
-    "            # note: (batch, 7 * 12, 660)\n",
-    "            loss = BasicAMT.loss(onset, note, midi_mixed)\n",
-    "            if torch.isnan(loss):\n",
-    "                print(\"Loss is NaN. Skipping this batch.\")\n",
-    "                optimizer.zero_grad()\n",
-    "                continue\n",
-    "            train_loss += loss.item()\n",
-    "            # 梯度累积\n",
-    "            loss = loss / virtual_batch_size\n",
-    "\n",
-    "        # loss.backward()\n",
-    "        scaler.scale(loss).backward()\n",
-    "        virtual_batch = (virtual_batch + 1) % virtual_batch_size\n",
-    "        if virtual_batch == 0:\n",
-    "            # optimizer.step()\n",
-    "            scaler.step(optimizer)\t# 调整lr\n",
-    "            scaler.update()\t\t# 更新梯度\n",
-    "            optimizer.zero_grad()\n",
-    "    \n",
-    "    if virtual_batch != 0:\n",
-    "        # optimizer.step()\n",
-    "        scaler.step(optimizer)\n",
-    "        scaler.update()\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "    train_loss /= len(dataloader)\n",
-    "\n",
-    "    # validation\n",
-    "    model.eval()\n",
-    "    val_loss = 0\n",
-    "    with torch.no_grad():\n",
-    "        for (input, target) in tqdm.tqdm(valloader):\n",
-    "            input = input.to(device)\n",
-    "            target = target.to(device)\n",
-    "\n",
-    "            mixed = torch.sum(input, dim=1, keepdim=False)\n",
-    "            midi_mixed, _ = target.max(dim=-3, keepdim=False)\n",
-    "\n",
-    "            onset, note = model(mixed)\n",
-    "            loss = BasicAMT.loss(onset, note, midi_mixed)\n",
-    "\n",
-    "            val_loss += loss.item()\n",
-    "\n",
-    "        val_loss /= len(valloader)\n",
-    "        schedular.step(val_loss)\n",
-    "\n",
-    "    # save checkpoint\n",
-    "    checkpoint_filename = f\"epoch{epoch}.pth\" if epoch % stage_save_interval == 0 else checkpoint_path\n",
-    "    save_checkpoint({\n",
-    "        'epoch': epoch,\n",
-    "        'state_dict': model.state_dict(),\n",
-    "        'min_loss': min_loss,\n",
-    "        'avg_loss': val_loss,\n",
-    "        'optimizer': optimizer.state_dict(),\n",
-    "    }, val_loss < min_loss, filename = checkpoint_filename)\n",
-    "\n",
-    "    if val_loss < min_loss:\n",
-    "        min_loss = val_loss\n",
-    "\n",
-    "    print(f\"====> Epoch: {epoch} Average train loss: {train_loss:.4f}; Average val loss: {val_loss:.4f}\")\n",
-    "    with open(loss_path, 'a') as f:\n",
-    "        f.write(f\"{epoch}:\\ttrain_loss: {train_loss:.4f}\\tval_loss: {val_loss:.4f}\\n\")\n",
-    "    epoch_now = epoch\n"
    ]
   },
   {
@@ -379,13 +270,11 @@
    "source": [
     "# 读取音频，分析为CQT\n",
     "import torchaudio\n",
-    "from utils.midiarray import numpy2midi\n",
     "from utils.wavtool import waveInfo\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "test_wave_path = \"../data/inferMusic/piano_short.wav\"\n",
-    "# test_wave_path = r'C:\\amt\\data\\septimbre\\small\\inst0\\0.wav'\n",
     "waveInfo(test_wave_path)\n",
     "\n",
     "waveform, sample_rate = torchaudio.load(test_wave_path, normalize=True)\n",
@@ -421,11 +310,20 @@
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model, \"basicpitch_model.pth\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch",
+   "display_name": "amt",
    "language": "python",
    "name": "python3"
   },
