--- a/evaluate/eval_basicpitch.ipynb
+++ b/evaluate/eval_basicpitch.ipynb
@@ -26,7 +26,25 @@
     "\n",
     "s_per_frame = 256 / 22050\n",
     "\n",
-    "dataset_folders = [\"BACH10_processed\", \"URMP_processed\", \"PHENICX_processed\"]"
+    "dataset_folders = [\"BACH10_processed\", \"URMP_processed\", \"PHENICX_processed\"]\n",
+    "\n",
+    "# CQT配置 因为BasicPitch的CQT不参与训练\n",
+    "import tomllib\n",
+    "with open('../model/config.toml', 'br') as f:\n",
+    "    CQTconfig = tomllib.load(f)['CQT']\n",
+    "s_per_frame = CQTconfig['hop'] / CQTconfig['fs']\n",
+    "\n",
+    "from model.CQT import CQTsmall\n",
+    "\n",
+    "cqt = CQTsmall(\n",
+    "    CQTconfig['fs'],\n",
+    "    fmin=CQTconfig['fmin'],\n",
+    "    octaves=CQTconfig['octaves'],\n",
+    "    bins_per_octave=CQTconfig['bins_per_octave'],\n",
+    "    hop=CQTconfig['hop'],\n",
+    "    filter_scale=CQTconfig['filter_scale'],\n",
+    "    requires_grad=False\n",
+    ")"
    ]
   },
   {
@@ -38,7 +56,7 @@
     "def amt_one(model, file):\n",
     "    waveform, sample_rate = torchaudio.load(file)\n",
     "    waveform = waveform.unsqueeze(0)\n",
-    "    onset, note = model(waveform)\n",
+    "    onset, note = model(cqt(waveform))\n",
     "    onset = onset.cpu().numpy()[0]\n",
     "    note = note.cpu().numpy()[0]\n",
     "    return onset, note\n",
@@ -208,9 +226,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_folder_name = \"basicamt\"\n",
+    "model_folder_name = \"basicpitch\"\n",
     "sys.path.append(f'../{model_folder_name}')\n",
-    "model = torch.load(f\"../{model_folder_name}/basicamt_model.pth\")\n",
+    "model = torch.load(f\"../{model_folder_name}/basicpitch_model.pth\")\n",
     "model.eval()"
    ]
   },
@@ -249,32 +267,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- BACH10合奏：Best threshold: 0.15312, F1: 0.8029144908856092\n",
+    "- BACH10合奏: Best threshold: 0.212, F1: 0.7868884110956198\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.10000 | 0.65786 | 0.73881 | 0.85705 | 0.79322 |\n",
-    "| 0.14000 | 0.67115 | 0.79435 | 0.81210 | 0.80279 |\n",
-    "| 0.18000 | 0.66741 | 0.83337 | 0.76996 | 0.80009 |\n",
-    "| Best threshold | 0.14 | ~ | ~ | F1: 0.8027928864331081 |\n",
-    "| 0.10800 | 0.66312 | 0.75257 | 0.84787 | 0.79704 |\n",
-    "| 0.11600 | 0.66638 | 0.76456 | 0.83826 | 0.79938 |\n",
-    "| 0.12400 | 0.66885 | 0.77563 | 0.82911 | 0.80116 |\n",
-    "| 0.13200 | 0.67041 | 0.78556 | 0.82038 | 0.80227 |\n",
-    "| 0.14000 | 0.67115 | 0.79435 | 0.81210 | 0.80279 |\n",
-    "| 0.14800 | 0.67121 | 0.80310 | 0.80322 | 0.80283 |\n",
-    "| 0.15600 | 0.67129 | 0.81163 | 0.79494 | 0.80287 |\n",
-    "| 0.16400 | 0.67049 | 0.81933 | 0.78658 | 0.80230 |\n",
-    "| Best threshold | 0.156 | ~ | ~ | F1: 0.8028732920285189 |\n",
-    "| 0.14960 | 0.67106 | 0.80460 | 0.80150 | 0.80271 |\n",
-    "| 0.15120 | 0.67132 | 0.80669 | 0.79979 | 0.80289 |\n",
-    "| 0.15280 | 0.67140 | 0.80843 | 0.79821 | 0.80295 |\n",
-    "| 0.15440 | 0.67143 | 0.81007 | 0.79664 | 0.80297 |\n",
-    "| 0.15600 | 0.67129 | 0.81163 | 0.79494 | 0.80287 |\n",
-    "| Best threshold | 0.1544 | ~ | ~ | F1: 0.8029676127610162 |\n",
-    "| 0.15312 | 0.67135 | 0.80869 | 0.79789 | 0.80291 |\n",
-    "| 0.15344 | 0.67135 | 0.80907 | 0.79752 | 0.80291 |\n",
-    "| Best threshold | 0.15312 | ~ | ~ | F1: 0.8029144908856092 |"
+    "| 0.10000 | 0.07300 | 0.07319 | 0.96681 | 0.13605 |\n",
+    "| 0.14000 | 0.58421 | 0.63114 | 0.88663 | 0.73717 |\n",
+    "| 0.18000 | 0.64204 | 0.73711 | 0.83230 | 0.78167 |\n",
+    "| 0.22000 | 0.64897 | 0.78176 | 0.79222 | 0.78681 |\n",
+    "| 0.26000 | 0.64278 | 0.81081 | 0.75598 | 0.78230 |\n",
+    "| Best threshold | 0.22 | ~ | ~ | F1: 0.7868131183876813 |\n",
+    "| 0.18800 | 0.64509 | 0.74837 | 0.82334 | 0.78393 |\n",
+    "| 0.19600 | 0.64703 | 0.75785 | 0.81525 | 0.78536 |\n",
+    "| 0.20400 | 0.64826 | 0.76664 | 0.80720 | 0.78627 |\n",
+    "| 0.21200 | 0.64909 | 0.77487 | 0.79957 | 0.78689 |\n",
+    "| 0.22000 | 0.64897 | 0.78176 | 0.79222 | 0.78681 |\n",
+    "| Best threshold | 0.212 | ~ | ~ | F1: 0.7868884110956198 |\n",
+    "| 0.20560 | 0.64838 | 0.76811 | 0.80578 | 0.78636 |\n",
+    "| 0.20720 | 0.64836 | 0.76972 | 0.80400 | 0.78636 |\n",
+    "| Best threshold | 0.2056 | ~ | ~ | F1: 0.7863636740318917 |\n",
+    "| 0.20576 | 0.64844 | 0.76830 | 0.80568 | 0.78641 |\n",
+    "| 0.20592 | 0.64834 | 0.76839 | 0.80542 | 0.78634 |\n",
+    "| Best threshold | 0.20576 | ~ | ~ | F1: 0.7864134262655582 |"
    ]
   },
   {
@@ -293,34 +307,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- BACH10所有音频：Best threshold: 0.30184, F1: 0.860866334491572\n",
+    "- BACH10所有音频（独奏+合奏）: Best threshold: 0.385, F1: 0.8791347943492717\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.25000 | 0.76245 | 0.85539 | 0.87324 | 0.85901 |\n",
-    "| 0.29500 | 0.76551 | 0.87300 | 0.85966 | 0.86057 |\n",
-    "| 0.34000 | 0.76596 | 0.88729 | 0.84707 | 0.86016 |\n",
-    "| Best threshold | 0.295 | ~ | ~ | F1: 0.8605656078947697 |\n",
-    "| 0.25900 | 0.76346 | 0.85948 | 0.87029 | 0.85960 |\n",
-    "| 0.26800 | 0.76413 | 0.86317 | 0.86742 | 0.85994 |\n",
-    "| 0.27700 | 0.76489 | 0.86684 | 0.86475 | 0.86034 |\n",
-    "| 0.28600 | 0.76519 | 0.87000 | 0.86209 | 0.86045 |\n",
-    "| 0.29500 | 0.76551 | 0.87300 | 0.85966 | 0.86057 |\n",
-    "| 0.30400 | 0.76600 | 0.87632 | 0.85706 | 0.86076 |\n",
-    "| 0.31300 | 0.76596 | 0.87897 | 0.85461 | 0.86063 |\n",
-    "| Best threshold | 0.304 | ~ | ~ | F1: 0.8607566451715536 |\n",
-    "| 0.29680 | 0.76568 | 0.87378 | 0.85911 | 0.86065 |\n",
-    "| 0.29860 | 0.76592 | 0.87459 | 0.85863 | 0.86079 |\n",
-    "| 0.30040 | 0.76603 | 0.87520 | 0.85816 | 0.86083 |\n",
-    "| 0.30220 | 0.76609 | 0.87580 | 0.85766 | 0.86084 |\n",
-    "| 0.30400 | 0.76600 | 0.87632 | 0.85706 | 0.86076 |\n",
-    "| Best threshold | 0.3022 | ~ | ~ | F1: 0.8608435176278999 |\n",
-    "| 0.30076 | 0.76607 | 0.87536 | 0.85805 | 0.86085 |\n",
-    "| 0.30112 | 0.76608 | 0.87547 | 0.85795 | 0.86085 |\n",
-    "| 0.30148 | 0.76610 | 0.87559 | 0.85787 | 0.86086 |\n",
-    "| 0.30184 | 0.76612 | 0.87571 | 0.85777 | 0.86087 |\n",
-    "| 0.30220 | 0.76609 | 0.87580 | 0.85766 | 0.86084 |\n",
-    "| Best threshold | 0.30184 | ~ | ~ | F1: 0.860866334491572 |"
+    "| 0.25000 | 0.76695 | 0.82187 | 0.91765 | 0.86378 |\n",
+    "| 0.29500 | 0.78126 | 0.84995 | 0.90416 | 0.87294 |\n",
+    "| 0.34000 | 0.78959 | 0.87222 | 0.89069 | 0.87788 |\n",
+    "| 0.38500 | 0.79255 | 0.88961 | 0.87691 | 0.87913 |\n",
+    "| 0.43000 | 0.79237 | 0.90400 | 0.86317 | 0.87822 |\n",
+    "| Best threshold | 0.385 | ~ | ~ | F1: 0.8791347943492717 |\n",
+    "| 0.34900 | 0.79008 | 0.87553 | 0.88793 | 0.87810 |\n",
+    "| 0.35800 | 0.79094 | 0.87919 | 0.88524 | 0.87851 |\n",
+    "| 0.36700 | 0.79173 | 0.88286 | 0.88253 | 0.87889 |\n",
+    "| 0.37600 | 0.79218 | 0.88629 | 0.87972 | 0.87904 |\n",
+    "| 0.38500 | 0.79255 | 0.88961 | 0.87691 | 0.87913 |\n",
+    "| 0.39400 | 0.79246 | 0.89232 | 0.87420 | 0.87893 |\n",
+    "| Best threshold | 0.385 | ~ | ~ | F1: 0.8791347943492717 |\n",
+    "| 0.37780 | 0.79237 | 0.88706 | 0.87915 | 0.87912 |\n",
+    "| 0.37960 | 0.79239 | 0.88765 | 0.87860 | 0.87911 |\n",
+    "| Best threshold | 0.3778 | ~ | ~ | F1: 0.8791189471612734 |\n",
+    "| 0.37798 | 0.79235 | 0.88711 | 0.87909 | 0.87911 |\n",
+    "| 0.37816 | 0.79238 | 0.88718 | 0.87905 | 0.87912 |\n",
+    "| 0.37834 | 0.79235 | 0.88722 | 0.87897 | 0.87910 |\n",
+    "| Best threshold | 0.37816 | ~ | ~ | F1: 0.8791211356037368 |"
    ]
   },
   {
@@ -332,39 +342,40 @@
     "# 看PHENICX合奏音频的结果\n",
     "npyfolder = f\"{model_folder_name}/PHENICX_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\".npy\")]\n",
-    "find_best_threshold(npys, (0.02, 0.2), step_num=10, generation=4, log=True)"
+    "find_best_threshold(npys, (0.1, 0.4), step_num=10, generation=4, log=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- PHENICX合奏：Best threshold: 0.06464, F1: 0.5951196104555911\n",
+    "- PHENICX合奏音频: Best threshold: 0.13912, F1: 0.5030662912096693\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.02000 | 0.29774 | 0.32434 | 0.78537 | 0.45879 |\n",
-    "| 0.03800 | 0.39485 | 0.47775 | 0.69539 | 0.56579 |\n",
-    "| 0.05600 | 0.42212 | 0.56043 | 0.63020 | 0.59276 |\n",
-    "| 0.07400 | 0.42333 | 0.60922 | 0.57939 | 0.59346 |\n",
-    "| 0.09200 | 0.41475 | 0.64209 | 0.53722 | 0.58452 |\n",
-    "| Best threshold | 0.074 | ~ | ~ | F1: 0.59346064026473 |\n",
-    "| 0.05960 | 0.42356 | 0.57159 | 0.61946 | 0.59407 |\n",
-    "| 0.06320 | 0.42446 | 0.58208 | 0.60926 | 0.59487 |\n",
-    "| 0.06680 | 0.42493 | 0.59219 | 0.59927 | 0.59523 |\n",
-    "| 0.07040 | 0.42455 | 0.60131 | 0.58927 | 0.59476 |\n",
-    "| Best threshold | 0.0668 | ~ | ~ | F1: 0.5952275971754704 |\n",
-    "| 0.06392 | 0.42458 | 0.58414 | 0.60720 | 0.59496 |\n",
-    "| 0.06464 | 0.42476 | 0.58628 | 0.60524 | 0.59512 |\n",
-    "| 0.06536 | 0.42478 | 0.58829 | 0.60309 | 0.59511 |\n",
-    "| Best threshold | 0.06464 | ~ | ~ | F1: 0.5951196104555911 |\n",
-    "| 0.06406 | 0.42460 | 0.58457 | 0.60677 | 0.59498 |\n",
-    "| 0.06421 | 0.42468 | 0.58503 | 0.60642 | 0.59505 |\n",
-    "| 0.06435 | 0.42471 | 0.58546 | 0.60602 | 0.59507 |\n",
-    "| 0.06450 | 0.42471 | 0.58588 | 0.60558 | 0.59507 |\n",
-    "| 0.06464 | 0.42476 | 0.58628 | 0.60524 | 0.59512 |\n",
-    "| 0.06478 | 0.42473 | 0.58663 | 0.60479 | 0.59509 |\n",
-    "| Best threshold | 0.06464 | ~ | ~ | F1: 0.5951196104555911 |"
+    "| 0.10000 | 0.06430 | 0.06534 | 0.80577 | 0.12063 |\n",
+    "| 0.13000 | 0.32715 | 0.47392 | 0.51946 | 0.49196 |\n",
+    "| 0.16000 | 0.33276 | 0.58757 | 0.43712 | 0.49662 |\n",
+    "| 0.19000 | 0.31276 | 0.63190 | 0.38397 | 0.47271 |\n",
+    "| Best threshold | 0.16 | ~ | ~ | F1: 0.4966192700691109 |\n",
+    "| 0.13600 | 0.33624 | 0.51354 | 0.49875 | 0.50181 |\n",
+    "| 0.14200 | 0.33905 | 0.54113 | 0.48055 | 0.50458 |\n",
+    "| 0.14800 | 0.33799 | 0.55964 | 0.46445 | 0.50304 |\n",
+    "| Best threshold | 0.142 | ~ | ~ | F1: 0.5045805958796423 |\n",
+    "| 0.13720 | 0.33691 | 0.51905 | 0.49508 | 0.50248 |\n",
+    "| 0.13840 | 0.33743 | 0.52410 | 0.49160 | 0.50300 |\n",
+    "| 0.13960 | 0.33748 | 0.52861 | 0.48775 | 0.50298 |\n",
+    "| Best threshold | 0.1384 | ~ | ~ | F1: 0.5030033494037806 |\n",
+    "| 0.13744 | 0.33703 | 0.52013 | 0.49437 | 0.50261 |\n",
+    "| 0.13768 | 0.33719 | 0.52121 | 0.49373 | 0.50278 |\n",
+    "| 0.13792 | 0.33725 | 0.52212 | 0.49304 | 0.50284 |\n",
+    "| 0.13816 | 0.33732 | 0.52307 | 0.49232 | 0.50290 |\n",
+    "| 0.13840 | 0.33743 | 0.52410 | 0.49160 | 0.50300 |\n",
+    "| 0.13864 | 0.33748 | 0.52499 | 0.49090 | 0.50303 |\n",
+    "| 0.13888 | 0.33750 | 0.52591 | 0.49010 | 0.50304 |\n",
+    "| 0.13912 | 0.33753 | 0.52686 | 0.48936 | 0.50307 |\n",
+    "| 0.13936 | 0.33745 | 0.52765 | 0.48851 | 0.50296 |\n",
+    "| Best threshold | 0.13912 | ~ | ~ | F1: 0.5030662912096693 |"
    ]
   },
   {
@@ -383,34 +394,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- URMP合奏：Best threshold: 0.1384, F1: 0.7232317124904409\n",
+    "- URMP合奏: Best threshold: 0.19984, F1: 0.6805771669043961\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.10000 | 0.56187 | 0.69005 | 0.74933 | 0.71611 |\n",
-    "| 0.14000 | 0.57086 | 0.75036 | 0.70254 | 0.72308 |\n",
-    "| 0.18000 | 0.56544 | 0.78914 | 0.66436 | 0.71812 |\n",
-    "| Best threshold | 0.14 | ~ | ~ | F1: 0.7230835170006764 |\n",
-    "| 0.10800 | 0.56556 | 0.70472 | 0.73898 | 0.71910 |\n",
-    "| 0.11600 | 0.56809 | 0.71771 | 0.72932 | 0.72110 |\n",
-    "| 0.12400 | 0.56992 | 0.72978 | 0.72017 | 0.72251 |\n",
-    "| 0.13200 | 0.57070 | 0.74045 | 0.71125 | 0.72306 |\n",
-    "| 0.14000 | 0.57086 | 0.75036 | 0.70254 | 0.72308 |\n",
-    "| 0.14800 | 0.57055 | 0.75937 | 0.69436 | 0.72273 |\n",
-    "| Best threshold | 0.14 | ~ | ~ | F1: 0.7230835170006764 |\n",
-    "| 0.13360 | 0.57087 | 0.74258 | 0.70955 | 0.72317 |\n",
-    "| 0.13520 | 0.57090 | 0.74460 | 0.70776 | 0.72317 |\n",
-    "| 0.13680 | 0.57095 | 0.74659 | 0.70604 | 0.72319 |\n",
-    "| 0.13840 | 0.57102 | 0.74857 | 0.70437 | 0.72323 |\n",
-    "| 0.14000 | 0.57086 | 0.75036 | 0.70254 | 0.72308 |\n",
-    "| Best threshold | 0.1384 | ~ | ~ | F1: 0.7232317124904409 |\n",
-    "| 0.13712 | 0.57094 | 0.74699 | 0.70566 | 0.72318 |\n",
-    "| 0.13744 | 0.57095 | 0.74736 | 0.70534 | 0.72318 |\n",
-    "| 0.13776 | 0.57095 | 0.74772 | 0.70503 | 0.72318 |\n",
-    "| 0.13808 | 0.57097 | 0.74812 | 0.70470 | 0.72320 |\n",
-    "| 0.13840 | 0.57102 | 0.74857 | 0.70437 | 0.72323 |\n",
-    "| 0.13872 | 0.57099 | 0.74893 | 0.70402 | 0.72320 |\n",
-    "| Best threshold | 0.1384 | ~ | ~ | F1: 0.7232317124904409 |"
+    "| 0.10000 | 0.03940 | 0.03954 | 0.92550 | 0.07554 |\n",
+    "| 0.14000 | 0.46465 | 0.53562 | 0.77944 | 0.63012 |\n",
+    "| 0.18000 | 0.51735 | 0.65618 | 0.71011 | 0.67769 |\n",
+    "| 0.22000 | 0.51936 | 0.70875 | 0.66068 | 0.67918 |\n",
+    "| 0.26000 | 0.50967 | 0.74236 | 0.61969 | 0.67021 |\n",
+    "| Best threshold | 0.22 | ~ | ~ | F1: 0.6791830385081563 |\n",
+    "| 0.18800 | 0.51967 | 0.66952 | 0.69929 | 0.67969 |\n",
+    "| 0.19600 | 0.52056 | 0.68085 | 0.68888 | 0.68043 |\n",
+    "| 0.20400 | 0.52061 | 0.69097 | 0.67895 | 0.68043 |\n",
+    "| 0.21200 | 0.52040 | 0.70045 | 0.66975 | 0.68016 |\n",
+    "| Best threshold | 0.204 | ~ | ~ | F1: 0.6804304427093903 |\n",
+    "| 0.19760 | 0.52061 | 0.68298 | 0.68682 | 0.68047 |\n",
+    "| 0.19920 | 0.52066 | 0.68509 | 0.68479 | 0.68050 |\n",
+    "| 0.20080 | 0.52069 | 0.68716 | 0.68279 | 0.68051 |\n",
+    "| 0.20240 | 0.52067 | 0.68916 | 0.68082 | 0.68050 |\n",
+    "| Best threshold | 0.2008 | ~ | ~ | F1: 0.6805145758360888 |\n",
+    "| 0.19952 | 0.52071 | 0.68554 | 0.68441 | 0.68054 |\n",
+    "| 0.19984 | 0.52076 | 0.68602 | 0.68401 | 0.68058 |\n",
+    "| 0.20016 | 0.52071 | 0.68638 | 0.68360 | 0.68054 |\n",
+    "| Best threshold | 0.19984 | ~ | ~ | F1: 0.6805771669043961 |"
    ]
   },
   {
@@ -422,43 +429,51 @@
     "# 只看URMP的独奏结果\n",
     "npyfolder = f\"{model_folder_name}/URMP_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if not f.endswith(\"0.npy\")]\n",
-    "find_best_threshold(npys, (0.35, 0.5), step_num=10, generation=4, log=True)"
+    "find_best_threshold(npys, (0.35, 0.6), step_num=10, generation=4, log=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- URMP的独奏：Best threshold: 0.3518, F1: 0.8055191663063108\n",
+    "- URMP独奏: Best threshold: 0.3848, F1: 0.7961901690780004\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.35000 | 0.68625 | 0.85725 | 0.77045 | 0.80550 |\n",
-    "| 0.36500 | 0.68616 | 0.86241 | 0.76626 | 0.80536 |\n",
-    "| Best threshold | 0.35 | ~ | ~ | F1: 0.8054999270748892 |\n",
-    "| 0.35150 | 0.68634 | 0.85782 | 0.77008 | 0.80555 |\n",
-    "| 0.35300 | 0.68635 | 0.85831 | 0.76971 | 0.80556 |\n",
-    "| 0.35450 | 0.68632 | 0.85888 | 0.76926 | 0.80553 |\n",
-    "| Best threshold | 0.353 | ~ | ~ | F1: 0.8055610835598012 |\n",
-    "| 0.35180 | 0.68630 | 0.85788 | 0.76998 | 0.80552 |\n",
-    "| 0.35210 | 0.68630 | 0.85796 | 0.76992 | 0.80552 |\n",
-    "| Best threshold | 0.3518 | ~ | ~ | F1: 0.8055191663063108 |\n",
-    "| 0.35183 | 0.68630 | 0.85788 | 0.76998 | 0.80552 |\n",
-    "| 0.35186 | 0.68630 | 0.85789 | 0.76997 | 0.80552 |\n",
-    "| Best threshold | 0.3518 | ~ | ~ | F1: 0.8055191663063108 |"
+    "| 0.35000 | 0.66955 | 0.80760 | 0.79104 | 0.79439 |\n",
+    "| 0.37500 | 0.67200 | 0.82350 | 0.78073 | 0.79594 |\n",
+    "| 0.40000 | 0.67278 | 0.83754 | 0.77053 | 0.79622 |\n",
+    "| 0.42500 | 0.67249 | 0.85055 | 0.76028 | 0.79570 |\n",
+    "| Best threshold | 0.4 | ~ | ~ | F1: 0.7962197492483829 |\n",
+    "| 0.38000 | 0.67229 | 0.82648 | 0.77872 | 0.79610 |\n",
+    "| 0.38500 | 0.67248 | 0.82929 | 0.77669 | 0.79619 |\n",
+    "| 0.39000 | 0.67254 | 0.83205 | 0.77453 | 0.79615 |\n",
+    "| Best threshold | 0.385 | ~ | ~ | F1: 0.7961863006077127 |\n",
+    "| 0.38100 | 0.67234 | 0.82703 | 0.77834 | 0.79612 |\n",
+    "| 0.38200 | 0.67241 | 0.82761 | 0.77796 | 0.79617 |\n",
+    "| 0.38300 | 0.67243 | 0.82820 | 0.77752 | 0.79617 |\n",
+    "| 0.38400 | 0.67246 | 0.82874 | 0.77710 | 0.79618 |\n",
+    "| 0.38500 | 0.67248 | 0.82929 | 0.77669 | 0.79619 |\n",
+    "| 0.38600 | 0.67247 | 0.82979 | 0.77626 | 0.79617 |\n",
+    "| Best threshold | 0.385 | ~ | ~ | F1: 0.7961863006077127 |\n",
+    "| 0.38420 | 0.67246 | 0.82888 | 0.77700 | 0.79618 |\n",
+    "| 0.38440 | 0.67247 | 0.82899 | 0.77691 | 0.79618 |\n",
+    "| 0.38460 | 0.67247 | 0.82910 | 0.77684 | 0.79619 |\n",
+    "| 0.38480 | 0.67248 | 0.82921 | 0.77676 | 0.79619 |\n",
+    "| 0.38500 | 0.67248 | 0.82929 | 0.77669 | 0.79619 |\n",
+    "| Best threshold | 0.3848 | ~ | ~ | F1: 0.7961901690780004 |"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19944\n",
-      "46564\n"
+      "56517\n"
      ]
     }
    ],
@@ -466,7 +481,6 @@
     "# 输出参数数量\n",
     "def count_parameters(model):\n",
     "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(count_parameters(model.cqt))\n",
     "print(count_parameters(model))"
    ]
   }
